hopefully fixed layout issues of about page on tablet and mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,17 +3,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   color: #3d405b;
+  position: relative !important;
+  width: 100vw !important;
+  height: 100% !important;
 }
 
 .about-container > * {
   margin-top: 40px;
   margin-bottom: 40px;
 }
-
 .bio {
-  padding-left: 20%;
-  padding-right: 20%;
-  font-size: 1.5em !important;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+@media (min-width: 900px) {
+  .bio {
+    font-size: 1em !important;
+  }
+}
+@media (min-width: 600px) and (max-width: 900px) {
+  .bio {
+    font-size: 0.9em !important;
+  }
+}
+
+@media (max-width: 600px) {
+  .bio {
+    font-size: 0.8em !important;
+  }
 }
